Reduce whitespace in plantlogs. Fixes #90

--- a/app/assets/stylesheets/plant-show.scss
+++ b/app/assets/stylesheets/plant-show.scss
@@ -63,6 +63,8 @@
 
 //Plantlog History
 .plantlog__box {
+  display: flex;
+  flex-flow: column wrap;
   padding: 20px 20px;
   color: #555;
   letter-spacing: .1rem;
@@ -79,17 +81,26 @@
     padding: 0 10px;
     font-size: 20px;
     opacity: 0.73;
+    width: 2em;
+  }
+
+  .row:first-child {
+    border-bottom: 1px solid #ddd;
+    margin-bottom: 10px;
+  }
+
+  span {
+    font-size: 2.4rem;
+    line-height: 1.5;
+    letter-spacing: -.05rem;
+  }
+
+  time {
+    float: right;
+  }
+
+  .plantlog__text {
+    word-wrap: break-word;
   }
 }
 
-.plantlog__box {
-  h6 {
-    margin-top: 9px;
-  }
-}
-
-.plantlog__text {
-  word-wrap: break-word;
-}
-
-// end of plantlog history
